Improved dynamic symbol files.
svn path=/trunk/debugger/; revision=7213

--- a/test/Debugger.exe.config.in
+++ b/test/Debugger.exe.config.in
@@ -2,5 +2,6 @@
   <appSettings>
     <add key="gdb-path" value="@GDB@" />
     <add key="mono-path" value="@MONO@" />
+    <add key="environment-path" value="@PATH@" />
   </appSettings>
 </configuration>
