*** empty log message ***
svn path=/trunk/debugger/; revision=7252

--- a/configure.in
+++ b/configure.in
@@ -64,6 +64,12 @@ PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
 AC_SUBST(BASE_DEPENDENCIES_LIBS)
 
+## Versions of dependencies
+GLIB_REQUIRED_VERSION=2.0.0
+PKG_CHECK_MODULES(SERVER_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gthread-2.0 >= $GLIB_REQUIRED_VERSION)
+AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
+AC_SUBST(SERVER_DEPENDENCIES_LIBS)
+
 AC_SUBST(CFLAGS)
 
 top_srcdir=`pwd`
@@ -76,6 +82,8 @@ AC_SUBST(PATH)
 AC_OUTPUT([
 Makefile
 glue/Makefile
+backends/Makefile
+backends/server/Makefile
 test/Makefile
 test/Debugger.exe.config
 ])
