--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -10,6 +10,7 @@ ALL_SOURCES = \
 	@top_srcdir@/frontends/command-line/*.cs	\
 	@top_srcdir@/backends/gdb/*.cs			\
 	@top_srcdir@/backends/ptrace/*.cs		\
+	@top_srcdir@/backends/*.cs			\
 	@top_srcdir@/interfaces/*.cs			\
 	@top_srcdir@/classes/*.cs
 
