--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -9,6 +9,7 @@ ALL_SOURCES = \
 	@top_srcdir@/frontends/gui/*.cs			\
 	@top_srcdir@/frontends/command-line/*.cs	\
 	@top_srcdir@/backends/ptrace/*.cs		\
+	@top_srcdir@/backends/mono-csharp/*.cs		\
 	@top_srcdir@/backends/*.cs			\
 	@top_srcdir@/arch/*.cs				\
 	@top_srcdir@/interfaces/*.cs			\
