--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -29,7 +29,7 @@ DEPS = \
 GUIDIR=../frontends/gui
 RESOURCES = \
 	 -resource:$(GUIDIR)/debugger.glade,debugger.glade \
-	-resource:.$(GUIDIR)/mono.png,mono.png
+	-resource:$(GUIDIR)/mono.png,mono.png
 
 Debugger.exe: $(ALL_SOURCES)
 	$(MCS) -o Debugger.exe $(DEPS) $(ALL_SOURCES) $(RESOURCES)
