2002-09-21  Martin Baulig  <martin@gnome.org>
	* backends/classes/: New directory.
	* backends/classes/TargetReader.cs: Moved here.
	* backends/classes/TargetStackLocation.cs: Moved here.

svn path=/trunk/debugger/; revision=7705

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -15,6 +15,7 @@ LIBRARY_SOURCES = \
 
 BACKEND_SOURCES = \
 	@top_srcdir@/backends/*.cs			\
+	@top_srcdir@/backends/classes/*.cs		\
 	@top_srcdir@/backends/ptrace/*.cs		\
 	@top_srcdir@/backends/mono-csharp/*.cs		\
 	@top_srcdir@/arch/*.cs
