--- a/configure.in
+++ b/configure.in
@@ -86,6 +86,15 @@ AC_PATH_PROG(MONO, mono, mono)
 AC_PATH_PROG(GDB, gdb, gdb)
 AC_SUBST(PATH)
 
+dnl
+dnl Quick hack
+dnl
+monopath=`which mono`
+monopathbin=`dirname $monopath`
+GTKSHARP_PREFIX=`dirname $monopathbin`
+
+AC_SUBST(GTKSHARP_PREFIX)
+
 AC_OUTPUT([
 Makefile
 glue/Makefile
