Fix: Do not install our own 'gtk-api.xml' file, or we will override the real gtk-api.xml
svn path=/trunk/debugger/; revision=7887

--- a/widgets/generator/Makefile.am
+++ b/widgets/generator/Makefile.am
@@ -15,8 +15,5 @@ generated-stamp: $(APIS)
 clean:
 	rm -f generated-stamp
 
-apidir=$(datadir)/gapi
+EXTRA_DISt = gtk-api.xml
 
-api_FILES = gtk-api.xml
-
-api_DATA = gtk-api.xml
