2002-10-05  Martin Baulig  <martin@gnome.org>
	* frontends/gui/SourceView.cs: Made this class abstract.

	* frontends/gui/SourceManager.cs: Use Gtk.SourceView.

svn path=/trunk/debugger/; revision=8010

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -38,7 +38,8 @@ DEPS = \
 	-r System.Drawing	\
 	-r Mono.CSharp.Debugger	\
 	-r Mono.Debugger.dll	\
-	-r Mono.Debugger.Backend.dll
+	-r Mono.Debugger.Backend.dll	\
+	-r gtksourceview-sharp.dll
 
 GUIDIR=../frontends/gui
 RESOURCES = \
