2002-10-10  Martin Baulig  <martin@gnome.org>
	Improved core file support.

	* backends/IInferior.cs (IInferior.UpdateModules): New method to
	reload the modules.

	* backends/Debugger.cs (Backend.CurrentFrame, Backend.CurrentMethod,
	Backend.GetBacktrace): Don't use the SingleSteppingEngine if this
	is a core file.

	* arch/Bfd.cs: Improved support for core files and shared libraries.

svn path=/trunk/debugger/; revision=8141

--- a/test/Mono.Debugger.Backend.dll.config.in
+++ b/test/Mono.Debugger.Backend.dll.config.in
@@ -1,4 +1,7 @@
 <configuration>
+  <configSections>
+    <section name="appSettings" type="System.Configuration.NameValueFileSectionHandler,System"/>
+  </configSections>
   <appSettings>
     <add key="gdb-path" value="@GDB@" />
     <add key="mono-path" value="@MONO@" />
