2002-10-11  Martin Baulig  <martin@gnome.org>
	* backends/TargetMemoryArea.cs: New struct.

	* backends/IInferior.cs (IInferior.GetMemoryMaps): New method to
	get the memory maps as an array of TargetMemoryArea's.

	* frontends/gui/HexEditor.cs: Use the memory maps to ensure that
	we're only accessing mapped memory, allow editing of the memory.
	You need a new Gtk# for this.

svn path=/trunk/debugger/; revision=8170

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -21,9 +21,11 @@ BACKEND_SOURCES = \
 	@top_srcdir@/arch/*.cs
 
 LIBRARY_DEPS = \
+	-r glib-sharp.dll	\
 	-r Mono.CSharp.Debugger
 
 BACKEND_DEPS = \
+	-r glib-sharp.dll	\
 	-r Mono.Debugger.dll	\
 	-r Mono.CSharp.Debugger
 
