Few fixes to get a couple of API entry points that were not recognized working.
svn path=/trunk/debugger/; revision=8308

--- a/widgets/generator/Makefile.am
+++ b/widgets/generator/Makefile.am
@@ -2,6 +2,7 @@ APIS = \
 	gtk-api.xml
 
 API_INCLUDES = \
+	$(GTKSHARP_PREFIX)/share/gapi/gdk-api.xml \
 	$(GTKSHARP_PREFIX)/share/gapi/gtk-api.xml \
 	$(GTKSHARP_PREFIX)/share/gapi/atk-api.xml
 
