--- a/widgets/gtk/Makefile.in
+++ b/widgets/gtk/Makefile.in
@@ -3,7 +3,7 @@ MCS=mcs
 all: gtksourceview-sharp.dll
 
 gtksourceview-sharp.dll: generated/*.cs
-	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -o gtksourceview-sharp.dll --recurse '*.cs'
+	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -r gdk-sharp.dll -o gtksourceview-sharp.dll --recurse '*.cs'
 
 clean:
 	rm -f *.dll
