--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -45,8 +45,10 @@ DEPS = \
 
 GUIDIR=../frontends/gui
 RESOURCES = \
-	 -resource:$(GUIDIR)/debugger.glade,debugger.glade \
-	-resource:$(GUIDIR)/mono.png,mono.png
+	-resource:$(GUIDIR)/debugger.glade,debugger.glade	\
+	-resource:$(GUIDIR)/mono.png,mono.png			\
+	-resource:$(GUIDIR)/stop.png,stop.png			\
+	-resource:$(GUIDIR)/line.png,line.png
 
 Mono.Debugger.dll: $(LIBRARY_SOURCES)
 	$(MCS) /target:library /out:Mono.Debugger.dll $(MCS_FLAGS) $(LIBRARY_DEPS) $(LIBRARY_SOURCES)
