2002-11-30  Martin Baulig  <martin@ximian.com>
	* glue/mono-debugger-readline.[ch]: New files.

	* classes/GnuReadLine.cs: Added interface to GNU Readline.

svn path=/trunk/debugger/; revision=9280

--- a/glue/Makefile.am
+++ b/glue/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES = libmonodebuggerglue.la
+lib_LTLIBRARIES = libmonodebuggerglue.la libmonodebuggerreadline.la
 
 libmonodebuggerglue_la_SOURCES = \
 	iochannel.c		\
@@ -6,6 +6,12 @@ libmonodebuggerglue_la_SOURCES = \
 	#
 
 libmonodebuggerglue_la_LIBADD = @BASE_DEPENDENCIES_LIBS@
+
+libmonodebuggerreadline_la_SOURCES = \
+	mono-debugger-readline.c	\
+	mono-debugger-readline.h
+
+libmonodebuggerreadline_la_LIBADD = @BASE_DEPENDENCIES_LIBS@ -lreadline
 
 INCLUDES = @BASE_DEPENDENCIES_CFLAGS@
 
