2002-12-15  Martin Baulig  <martin@ximian.com>
	* frondends/command-line/Interpreter.cs: Use the new command line
	interface here.

svn path=/trunk/debugger/; revision=9670

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -7,6 +7,7 @@ linux: Mono.Debugger.dll Mono.Debugger.Backend.dll Debugger.exe Interpreter.exe
 
 ALL_SOURCES = \
 	@top_srcdir@/frontends/gui/*.cs			\
+	@top_srcdir@/frontends/scripting/*.cs		\
 	@top_srcdir@/frontends/command-line/Interpreter.cs
 
 INTERPRETER_SOURCES = \
