2002-12-24  Martin Baulig  <martin@ximian.com>
	The Monday Night Hack of week #52 - the BreakpointManager is done.

	* backends/BreakpointManager.cs: New file.  This is just a wrapper
	around the unmanaged API in backends/server/breakpoints.[ch].

	* backends/server/breakpoints.[ch]: New files.
	* backends/server/i386-linux-ptrace.c: Use a breakpoint manager
	which is shared between all threads of the same application.

	* backends/ThreadManager.cs
	(AcquireGlobalThreadLock, ReleaseGlobalThreadLock): Don't
	lock/unlock the calling process.

	* backends/SingleSteppingEngine.cs: Breakpoints are almost working
	again; we can now safely hit a breakpoint in another thread
	(except of a few race conditions which aren't fixed yet).

svn path=/trunk/debugger/; revision=9858

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -6,10 +6,12 @@ libmonodebuggerserver_la_SOURCES = \
 	library.c		\
 	i386-linux-ptrace.c	\
 	server.h		\
+	breakpoints.c		\
+	breakpoints.h		\
 	#
 
-libmonodebuggerserver_la_LIBADD = @BASE_DEPENDENCIES_LIBS@
+libmonodebuggerserver_la_LIBADD = @SERVER_DEPENDENCIES_LIBS@
 
-INCLUDES = @BASE_DEPENDENCIES_CFLAGS@
+INCLUDES = @SERVER_DEPENDENCIES_CFLAGS@
 
 CLEANFILES = lib*.a lib*.dll
