--- a/configure.in
+++ b/configure.in
@@ -78,9 +78,9 @@ AC_SUBST(top_srcdir)
 AC_CHECK_HEADER(dis-asm.h,, [AC_MSG_ERROR(
 [Can't find <dis-asm.h>, make sure you have binutils-dev >= 2.12 installed.])])
 AC_CHECK_LIB(bfd, bfd_get_arch,, [AC_MSG_ERROR(
-[Can't find libbfd, make sure you have binutils-dev >= 2.12 installed.])])
+[Can't find libbfd, make sure you have binutils-dev >= 2.12 installed.])], -liberty)
 AC_CHECK_LIB(opcodes, disassembler,, [AC_MSG_ERROR(
-[Can't find libopcodes, make sure you have binutils >= 2.12 installed.])], -lbfd)
+[Can't find libopcodes, make sure you have binutils >= 2.12 installed.])], -lbfd -liberty)
 
 AC_PATH_PROG(MONO, mono, mono)
 AC_SUBST(PATH)
