--- a/configure.in
+++ b/configure.in
@@ -120,6 +120,9 @@ AC_SUBST(GTKSHARP_PREFIX)
 AC_OUTPUT([
 Makefile
 glue/Makefile
+lib/Makefile
+lib/Debugger.exe.config
+lib/Interpreter.exe.config
 widgets/Makefile
 widgets/gtk/Makefile
 widgets/generator/Makefile
@@ -131,6 +134,4 @@ frontends/Makefile
 frontends/scripting/Makefile
 arch/Makefile
 test/Makefile
-test/Debugger.exe.config
-test/Interpreter.exe.config
 ])
