2003-01-05  Martin Baulig  <martin@ximian.com>
	* test/test.in: Added `test' target to run all the tests.

svn path=/trunk/debugger/; revision=10178

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -1,12 +1,30 @@
 MCS=mcs
+MCS_FLAGS=-g
+MONO=mono
 DESTDIR=
 
 all: linux
 
-linux: 
+TESTS	= TestManagedTypes.exe
+
+linux: $(TESTS)
+
+%.exe:%.cs
+	$(MCS) $(MCS_FLAGS) $<
 
 clean:
-	rm -f *.exe
+	rm -f *.exe *.dbg a.out
+
+test:
+	for test in $(TESTS) ; do \
+		echo -n "Running $$test ... " ; \
+		if $(MONO) ./$$test > /dev/null; then \
+			echo OK; \
+		else \
+			echo FAILED; exit 1; \
+		fi \
+	done
+	@echo "All tests passed."
 
 install: all
 
