2003-01-08  Peter Williams  <peterw@ximian.com>
	* frontends/scripting/Makefile.in: Make the jay rule not clobber Parser.cs
	if jay fails, and add a rule to regenerate Makefile if needed.

	* backends/ProcessStart.cs: If no directory argument is given, assume
	we're looking in the current directory.

svn path=/trunk/debugger/; revision=10360

--- a/frontends/scripting/Makefile.in
+++ b/frontends/scripting/Makefile.in
@@ -1,16 +1,18 @@
 MCS=mcs
-JAY=jay
+JAY=/home/peter/cvs/mcs/jay/jay
 DESTDIR=
 
-all: linux
+all: Makefile linux
 
 linux: Parser.cs
 
 Parser.cs: Parser.jay
-	$(JAY) -ctv < skeleton Parser.jay > Parser.cs
+	$(JAY) -ctv < skeleton Parser.jay > Parser.tmp && mv -f Parser.tmp Parser.cs
 
 clean:
 	rm -f Parser.cs y.output
 
 install: all
 
+Makefile: Makefile.in
+	cd ../.. && CONFIG_FILES=frontends/scripting/Makefile CONFIG_HEADERS= ./config.status
