2003-01-12  Martin Baulig  <martin@ximian.com>
	* widgets/sources/debuggerwidgets/: New directory.

	* widgets/sources/debuggerwidgets/debuggerentry.[ch]: New widget.
	This is derived from GtkEntry and has "previos_line" and
	"next_line" signals which are emitted when the user presses the
	Up/Down keys.

	* frontends/gui/CurrentInstructionEntry.cs: Use the new
	DebuggerEntry widget; if the user presses the Up/Down keys,
	display the next/previous instruction.

svn path=/trunk/debugger/; revision=10428

--- a/configure.in
+++ b/configure.in
@@ -125,9 +125,11 @@ lib/Debugger.exe.config
 lib/Interpreter.exe.config
 widgets/Makefile
 widgets/gtk/Makefile
+widgets/mono.debugger.gui/Makefile
 widgets/generator/Makefile
 widgets/sources/Makefile
 widgets/sources/gtksourceview/Makefile
+widgets/sources/debuggerwidgets/Makefile
 backends/Makefile
 backends/server/Makefile
 frontends/Makefile
