--- a/widgets/Makefile.am
+++ b/widgets/Makefile.am
@@ -1,4 +1,6 @@
-SUBDIRS = sources generator gtk
+SUBDIRS = sources generator gtk mono.debugger.gui
 
 api: 
 	PERLLIB=$(GTKSHARP_PREFIX)/share/perl5 PATH=$(GTKSHARP_PREFIX)/bin:$$PATH gapi.pl gtksourceview.sources generator
+	PERLLIB=$(GTKSHARP_PREFIX)/share/perl5 PATH=$(GTKSHARP_PREFIX)/bin:$$PATH gapi.pl debuggerwidget.sources generator
+
