We can now actually disable the GUI.
svn path=/trunk/debugger/; revision=10483

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,7 @@
-SUBDIRS = glue arch backends widgets frontends lib test
+if BUILD_GUI
+gui_SUBDIRS = widgets
+else
+gui_SUBDIRS =
+endif
+
+SUBDIRS = glue arch backends $(gui_SUBDIRS) frontends lib test
