2003-01-14  Martin Baulig  <martin@ximian.com>
	* configure.in (server_sources): AC_SUBST this to
	i386-linux-ptrace.c on Linux and to nothing on other systems.

	* backends/server/library.c: If we're on Linux, #include
	"i386-linux-ptrace.c", otherwise don't read a backend at all.

svn path=/trunk/debugger/; revision=10497

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -2,9 +2,12 @@ INCLUDES = @SERVER_DEPENDENCIES_CFLAGS@
 
 lib_LTLIBRARIES = libmonodebuggerserver.la
 
+EXTRA_libmonodebuggerserver_la_SOURCES = \
+	i386-linux-ptrace.c
+
 libmonodebuggerserver_la_SOURCES = \
 	library.c		\
-	i386-linux-ptrace.c	\
+	@server_sources@	\
 	server.h		\
 	breakpoints.c		\
 	breakpoints.h		\
