Added Makefile.am's everywhere and include all sources in EXTRA_DIST.
svn path=/trunk/debugger/; revision=10664

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,4 @@ else
 gui_SUBDIRS =
 endif
 
-SUBDIRS = glue arch backends $(gui_SUBDIRS) frontends lib test
+SUBDIRS = interfaces classes glue arch backends $(gui_SUBDIRS) frontends lib test
