--- a/configure.in
+++ b/configure.in
@@ -180,6 +180,7 @@ backends/Makefile
 backends/classes/Makefile
 backends/server/Makefile
 backends/ptrace/Makefile
+backends/mono-csharp/Makefile
 frontends/Makefile
 frontends/scripting/Makefile
 frontends/command-line/Makefile
