--- a/configure.in
+++ b/configure.in
@@ -118,7 +118,9 @@ AC_TRY_LINK_FUNC(_sch_istable,,[AC_MSG_ERROR([
 LIBS=$old_LIBS
 AC_MSG_RESULT(ok)
 
-AC_PATH_PROG(MONO, mono, mono)
+AC_PATH_PROG(MONO, mono, [AC_MSG_ERROR([Cannot find "mono" in your PATH])])
+AC_PATH_PROG(MCS, mcs, [AC_MSG_ERROR([Cannot find "mcs" in your PATH])])
+AC_PATH_PROG(JAY, jay, [AC_MSG_ERROR([Cannot find "jay" in your PATH])])
 AC_SUBST(PATH)
 
 
