Make this actually work ....
svn path=/trunk/debugger/; revision=10671

--- a/frontends/gui/Makefile.am
+++ b/frontends/gui/Makefile.am
@@ -1,1 +1,1 @@
-EXTRA_DIST = *.cs *.png STRATEGY debugger.glade debugger.gladep
+EXTRA_DIST = @srcdir@/*.cs @srcdir@/*.png STRATEGY debugger.glade debugger.gladep
