2003-01-19  Martin Baulig  <martin@ximian.com>
	Released version 0.2.0 "Boston" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=10716

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,6 @@ else
 gui_SUBDIRS =
 endif
 
-SUBDIRS = interfaces classes glue arch backends $(gui_SUBDIRS) frontends lib test
+SUBDIRS = interfaces classes glue arch backends $(gui_SUBDIRS) frontends lib test doc
+
+EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt README.FreeBSD
