--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(mono-debugger, 0.1.9)
+AM_INIT_AUTOMAKE(mono-debugger, 0.2.0)
 AM_MAINTAINER_MODE
 
 AC_CHECK_TOOL(CC, gcc, gcc)
@@ -201,4 +201,5 @@ frontends/command-line/Makefile
 frontends/gui/Makefile
 arch/Makefile
 test/Makefile
+doc/Makefile
 ])
