2003-01-22  Martin Baulig  <martin@ximian.com>
	* lib/Makefile.am: Use the new wrapper instead of @MONO@.  Added
	the ${LD_LIBRARY_PATH} to the config files.

	* backends/ProcessStart: Pass the LD_LIBRARY_PATH to the target.

svn path=/trunk/debugger/; revision=10811

--- a/configure.in
+++ b/configure.in
@@ -139,6 +139,7 @@ if test "x$JAY" = "x" ; then
 fi
 AM_CONDITIONAL(HAVE_JAY, test "x$have_jay" = "xyes")
 AC_SUBST(PATH)
+AC_SUBST(LD_LIBRARY_PATH)
 
 
 dnl
@@ -186,8 +187,6 @@ interfaces/Makefile
 classes/Makefile
 glue/Makefile
 lib/Makefile
-lib/Debugger.exe.config
-lib/Interpreter.exe.config
 wrapper/Makefile
 widgets/Makefile
 widgets/gtk/Makefile
